--- a/wp-content/themes/evie/assets/less/layouts/_footer.less
+++ b/wp-content/themes/evie/assets/less/layouts/_footer.less
@@ -1,1 +1,95 @@
-.content-info { }
+//===============================================================================
+//===============================================================================
+// Base
+//===============================================================================
+//===============================================================================
+//.content-info { }
+footer{
+	background:url(../img/sprites/border_footer.jpg) repeat-x #EAEBEB;
+	padding-top:60px;
+	padding-bottom:20px;
+	.social-link-container{
+		margin-bottom:15px;
+		text-align:left;
+	}
+	.footer-link-container{
+		.footer_link{
+			padding-left:0;
+			&:first-child > li{
+				padding-bottom:20px;
+				text-transform:uppercase;
+			}
+			&:first-child > li > a{
+				font-weight:bold;
+			}
+			li{
+				list-style:none;
+				a{
+					color:#000;
+				}
+			}
+			.sub-menu{
+				margin-top:10px;
+				padding-left:0;
+			}
+		}
+	}
+	.copyright{
+		text-transform:uppercase;
+		font-size:11px;
+		span{
+			display:inline-block;
+			margin:0 5px;
+		}
+		a{
+			color:#000;
+		}
+	}
+}
+
+//===============================================================================
+//===============================================================================
+// tablet
+//===============================================================================
+//===============================================================================
+@media (min-width: @screen-sm-min) {
+
+}
+
+//===============================================================================
+//===============================================================================
+// Desktop
+//===============================================================================
+//===============================================================================
+@media (min-width: @screen-md-min) {
+	footer{
+		.social-link-container{
+			margin-bottom:15px;
+			text-align:right;
+		}
+		.footer-link-container{
+			.footer_link{
+				&:first-child > li{
+					float:left;
+					margin-right:40px;
+					&:last-child{
+						margin-right:0;
+					}
+				}
+				.sub-menu{
+					margin-top:10px;
+					padding-left:0;
+				}
+			}
+		}
+	}
+}
+
+//===============================================================================
+//===============================================================================
+// Wide desktop
+//===============================================================================
+//===============================================================================
+@media (min-width: @screen-lg-min) {
+
+}
