--- a/wp-content/themes/evie/assets/less/main.less
+++ b/wp-content/themes/evie/assets/less/main.less
@@ -16,3 +16,6 @@
 @import "layouts/_footer";           // Footer styling
 @import "layouts/pages/_home";       // Home page styling
 @import "layouts/_posts";            // Post styling
+
+// Nav
+@import "navmenu";					 // Nav menu
