--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -8,6 +8,10 @@ body{
 	font-family: Arial, sans serif !important;
 }
 
+.main{
+	padding-top:110px;
+}
+
 //===============================================================================
 //===============================================================================
 // tablet
@@ -24,7 +28,7 @@ body{
 //===============================================================================
 @media (min-width: @screen-md-min) {
 	.main{
-		margin-top:165px;
+		padding-top:165px;
 	}
 }
 
