--- a/wp-content/themes/evie/assets/less/main.less
+++ b/wp-content/themes/evie/assets/less/main.less
@@ -19,3 +19,7 @@
 
 // Nav
 @import "navmenu";					 // Nav menu
+
+//Owl Carousel plugin
+@import "components/owl-carousel";
+@import "components/owl-theme";
