--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -6886,9 +6886,12 @@ button.close {
 body {
   font-family: Arial, sans serif !important;
 }
+.main {
+  padding-top: 110px;
+}
 @media (min-width: 992px) {
   .main {
-    margin-top: 165px;
+    padding-top: 165px;
   }
 }
 .comment-list ol {
@@ -6987,6 +6990,112 @@ footer .copyright a {
   footer .footer-link-container .footer_link .sub-menu {
     margin-top: 10px;
     padding-left: 0;
+  }
+}
+.home-banner .owl-wrapper-outer {
+  -webkit-box-shadow: 0px 7px 13px -3px #7d7c7d;
+  box-shadow: 0px 7px 13px -3px #7d7c7d;
+}
+.home-banner .owl-theme .owl-controls {
+  margin-top: 50px;
+}
+.home-banner .owl-theme .owl-controls .owl-page span {
+  background-color: #EA8B9C;
+  width: 8px;
+  height: 8px;
+}
+.home-banner .main-banner-item .img-responsive {
+  max-width: none;
+  width: 100%;
+}
+.promotion-banner {
+  margin-top: 35px;
+}
+.promotion-banner .img-responsive {
+  max-width: none;
+  width: 100%;
+}
+.promotion-banner .well {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  margin-bottom: 10px;
+  padding: 0;
+  border-width: 1px;
+  border-radius: 0;
+}
+.promotion-banner .well a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.promotion-banner .well-feature {
+  height: auto;
+  -webkit-background-size: 0 auto;
+          background-size: 0 auto;
+}
+.promotion-banner .well[href] {
+  border: 1px solid #fff;
+  -webkit-transition: -webkit-box-shadow 0.3s ease 0s, border 0.3s ease 0s;
+       -o-transition: box-shadow 0.3s ease 0s, border 0.3s ease 0s;
+          transition: box-shadow 0.3s ease 0s, border 0.3s ease 0s;
+}
+.best-seller {
+  margin-top: 40px;
+}
+.best-seller .best-seller-title-container {
+  margin-bottom: 40px;
+}
+.best-seller .best-seller-title-container .best-seller-title-left {
+  height: 51px;
+  background: url(../img/sprites/bg_bestseller.png) no-repeat left;
+}
+.best-seller .best-seller-title-container .best-seller-title-center {
+  height: 51px;
+  font-size: 20px;
+  line-height: 240%;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  background: url(../img/sprites/bg_bestseller.png) no-repeat center;
+}
+.best-seller .best-seller-title-container .best-seller-title-right {
+  height: 51px;
+  background: url(../img/sprites/bg_bestseller.png) no-repeat right;
+}
+.best-seller .woocommerce .products .product {
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+}
+.best-seller .woocommerce .products .product a {
+  color: #000;
+}
+.best-seller .woocommerce .products .product .button {
+  display: none;
+}
+@media (min-width: 992px) {
+  .promotion-banner .well-feature {
+    -webkit-background-size: cover;
+            background-size: cover;
+    height: 265px;
+  }
+  .promotion-banner .well[href] {
+    cursor: pointer;
+  }
+  .promotion-banner .well[href]:hover {
+    border-width: 1px;
+    border-color: #dfdfdf;
+    -webkit-box-shadow: inset 0px 0px 8px 2px #bfbfbf;
+    box-shadow: inset 0px 0px 8px 2px #bfbfbf;
+  }
+}
+@media (min-width: 1200px) {
+  .home-banner.container {
+    width: 100%;
+    max-width: 1360px;
+  }
+  .promotion-banner .well-feature {
+    height: 323px;
   }
 }
 .navbar-default {
@@ -7166,5 +7275,139 @@ footer .copyright a {
     width: 100%;
     font-size: 12px;
   }
+}
+/* 
+ * 	Core Owl Carousel CSS File
+ *	v1.3.3
+ */
+/* clearfix */
+.owl-carousel .owl-wrapper:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+/* display none until init */
+.owl-carousel {
+  display: none;
+  position: relative;
+  width: 100%;
+  -ms-touch-action: pan-y;
+}
+.owl-carousel .owl-wrapper {
+  display: none;
+  position: relative;
+  -webkit-transform: translate3d(0px, 0px, 0px);
+}
+.owl-carousel .owl-wrapper-outer {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+.owl-carousel .owl-wrapper-outer.autoHeight {
+  -webkit-transition: height 500ms ease-in-out;
+  -o-transition: height 500ms ease-in-out;
+  transition: height 500ms ease-in-out;
+}
+.owl-carousel .owl-item {
+  float: left;
+}
+.owl-controls .owl-page,
+.owl-controls .owl-buttons div {
+  cursor: pointer;
+}
+.owl-controls {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+/* mouse grab icon */
+.grabbing {
+  cursor: url(grabbing.png) 8 8, move;
+}
+/* fix */
+.owl-carousel .owl-wrapper,
+.owl-carousel .owl-item {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+}
+/*
+* 	Owl Carousel Owl Demo Theme 
+*	v1.3.3
+*/
+.owl-theme .owl-controls {
+  margin-top: 10px;
+  text-align: center;
+}
+/* Styling Next and Prev buttons */
+.owl-theme .owl-controls .owl-buttons div {
+  color: #FFF;
+  display: inline-block;
+  zoom: 1;
+  *display: inline;
+  /*IE7 life-saver */
+  margin: 5px;
+  padding: 3px 10px;
+  font-size: 12px;
+  border-radius: 30px;
+  background: #869791;
+  filter: alpha(opacity=50);
+  /*IE7 fix*/
+  opacity: 0.5;
+}
+/* Clickable class fix problem with hover on touch devices */
+/* Use it for non-touch hover action */
+.owl-theme .owl-controls.clickable .owl-buttons div:hover {
+  filter: alpha(opacity=100);
+  /*IE7 fix*/
+  opacity: 1;
+  text-decoration: none;
+}
+/* Styling Pagination*/
+.owl-theme .owl-controls .owl-page {
+  display: inline-block;
+  zoom: 1;
+  *display: inline;
+  /*IE7 life-saver */
+}
+.owl-theme .owl-controls .owl-page span {
+  display: block;
+  width: 12px;
+  height: 12px;
+  margin: 5px 7px;
+  filter: alpha(opacity=50);
+  /*IE7 fix*/
+  opacity: 0.5;
+  border-radius: 20px;
+  background: #869791;
+}
+.owl-theme .owl-controls .owl-page.active span,
+.owl-theme .owl-controls.clickable .owl-page:hover span {
+  filter: alpha(opacity=100);
+  /*IE7 fix*/
+  opacity: 1;
+}
+/* If PaginationNumbers is true */
+.owl-theme .owl-controls .owl-page span.owl-numbers {
+  height: auto;
+  width: auto;
+  color: #FFF;
+  padding: 2px 10px;
+  font-size: 12px;
+  border-radius: 30px;
+}
+/* preloading images */
+.owl-item.loading {
+  min-height: 150px;
+  background: url(AjaxLoader.gif) no-repeat center center;
 }
 /*# sourceMappingURL=main.css.map */
