--- a/wp-content/themes/evie/assets/less/main.less
+++ b/wp-content/themes/evie/assets/less/main.less
@@ -15,6 +15,7 @@
 @import "layouts/_sidebar";          // Sidebar styling
 @import "layouts/_footer";           // Footer styling
 @import "layouts/pages/_home";       // Home page styling
+@import "layouts/pages/_products";    // Product page styling
 @import "layouts/_posts";            // Post styling
 
 // Nav
