--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -6889,6 +6889,25 @@ body {
 .main {
   padding-top: 110px;
 }
+.breadcrumb-container {
+  background: #F5E8E5;
+  padding: 10px 0;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(245, 232, 229, 0.5);
+  box-shadow: 0px 3px 5px 0px rgba(245, 232, 229, 0.5);
+}
+.breadcrumb-container .woocommerce-breadcrumb {
+  font-weight: bold;
+  color: #000;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+.breadcrumb-container .woocommerce-breadcrumb a {
+  color: #000;
+  font-weight: normal!important;
+}
+.breadcrumb-container .woocommerce-breadcrumb .fa {
+  margin: 0 7px;
+}
 @media (min-width: 992px) {
   .main {
     padding-top: 165px;
@@ -7103,6 +7122,128 @@ footer .copyright a {
   }
   .promotion-banner .well-feature {
     height: 323px;
+  }
+}
+.single-product .product {
+  margin-top: 10px;
+}
+.single-product .product .product-title {
+  padding-bottom: 12px;
+  margin-bottom: 30px;
+  background: url(../img/sprites/border_double.png) repeat-x bottom;
+}
+.single-product .product .product-title h1 {
+  margin-top: 75px;
+}
+.single-product .product .product-content {
+  margin-bottom: 15px;
+}
+.single-product .product .product-other-detail-container {
+  padding-bottom: 30px;
+  border-bottom: 1px solid #000;
+  margin-bottom: 30px;
+}
+.single-product .product .product-other-detail-container .double-border-top-left {
+  background: url(../img/sprites/bg_product_other.png) no-repeat left top;
+  height: 35px;
+}
+.single-product .product .product-other-detail-container .double-border-top-mid {
+  background: url(../img/sprites/bg_product_other.png) no-repeat center top;
+  height: 35px;
+}
+.single-product .product .product-other-detail-container .double-border-top-right {
+  background: url(../img/sprites/bg_product_other.png) no-repeat right top;
+  height: 35px;
+}
+.single-product .product .product-other-detail-container .double-border-btm-left {
+  background: url(../img/sprites/bg_product_other.png) no-repeat left bottom;
+  height: 35px;
+}
+.single-product .product .product-other-detail-container .double-border-btm-mid {
+  background: url(../img/sprites/bg_product_other.png) no-repeat center bottom;
+  height: 35px;
+}
+.single-product .product .product-other-detail-container .double-border-btm-right {
+  background: url(../img/sprites/bg_product_other.png) no-repeat right bottom;
+  height: 35px;
+}
+.single-product .product .product-other-detail-container .product-other-detail-item {
+  text-align: center;
+  padding: 0 50px 20px 50px;
+}
+.single-product .product .product-other-detail-container .product-other-detail-item:first-child {
+  background: url(../img/sprites/bg_product_other_mid.png) repeat-y left, url(../img/sprites/bg_product_other_mid.png) repeat-y right;
+}
+.single-product .product .product-other-detail-container .product-other-detail-item:last-child {
+  background: url(../img/sprites/bg_product_other_mid.png) repeat-y left, url(../img/sprites/bg_product_other_mid.png) repeat-y right;
+}
+.single-product .product .product-other-detail-container .product-other-detail-item h2 {
+  text-transform: uppercase;
+  font-size: 21px;
+  border-bottom: 2px solid #000;
+  display: inline-block;
+  padding-bottom: 5px;
+  margin-bottom: 25px;
+}
+.single-product .product .upsells-container {
+  margin-bottom: 40px;
+}
+.single-product .product .upsells-container h2 {
+  text-align: center;
+  text-transform: uppercase;
+}
+.single-product .product .upsells-container a {
+  color: #000;
+  display: block;
+}
+.single-product .product .upsells-container .product-item-brief-wrapper {
+  position: relative;
+  height: 60px;
+}
+.single-product .product .upsells-container .product-item-brief-wrapper .product-item-brief-content {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+}
+.single-product .product .upsells-container .product-item-brief-wrapper .product-item-brief-content .product-series {
+  font-size: 12px;
+}
+.single-product .upsells {
+  text-align: center;
+  display: inline-block;
+  text-transform: uppercase;
+  width: 100%;
+}
+.single-product ul.products li.product {
+  text-align: center;
+}
+.single-product ul.products li.product a {
+  color: #000;
+  text-transform: uppercase;
+}
+.single-product ul.products li.product .button,
+.single-product ul.products li.product .product_type_simple {
+  display: none;
+}
+@media (min-width: 768px) {
+  .single-product .product .product-other-detail-container .product-other-detail-item {
+    display: table-cell;
+    float: none;
+  }
+  .single-product .product .product-other-detail-container .product-other-detail-item:first-child {
+    border-right: 1px solid #000;
+    background: url(../img/sprites/bg_product_other_mid.png) repeat-y left;
+  }
+  .single-product .product .product-other-detail-container .product-other-detail-item:last-child {
+    background: url(../img/sprites/bg_product_other_mid.png) repeat-y right;
+  }
+  .single-product ul.products li.product {
+    width: 30%!important;
+  }
+  .single-product ul.products li.product:last-child {
+    margin-right: 0!important;
   }
 }
 .navbar-default {
