--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -12,6 +12,27 @@ body{
 	padding-top:110px;
 }
 
+.breadcrumb-container{
+	background:#F5E8E5;
+	padding:10px 0;	
+	-webkit-box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
+	-moz-box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
+	box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
+	.woocommerce-breadcrumb{
+		font-weight:bold;
+		color:#000;
+		text-transform:uppercase;
+		margin-bottom:0;
+		a{
+			color:#000;
+			font-weight:normal!important;
+		}
+		.fa{
+			margin:0 7px;
+		}
+	}
+}
+
 //===============================================================================
 //===============================================================================
 // tablet
