--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -15,6 +15,7 @@ body{
 .breadcrumb-container{
 	background:#F5E8E5;
 	padding:10px 0;	
+	margin-bottom:10px;
 	-webkit-box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
 	-moz-box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
 	box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
