--- a/wp-content/themes/evie/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_home.less
@@ -61,6 +61,7 @@
 
 .best-seller{
 	margin-top:40px;
+	margin-bottom:40px;
 	.best-seller-title-container{
 		margin-bottom:40px;
 		.best-seller-title-left{
@@ -81,7 +82,19 @@
 			background:url(../img/sprites/bg_bestseller.png) no-repeat right;
 		}
 	}
-	.woocommerce{
+	.best-seller-item{
+		//width:100%;
+		text-align:center;
+		text-transform:uppercase;
+		a{
+			color:#000;
+		}
+		img{
+			width:100%;
+			height:auto;
+		}
+	}
+	/*.woocommerce{
 		.products{
 			.product{
 				width:100%;
@@ -95,7 +108,7 @@
 				}
 			}
 		}
-	}
+	}*/
 }
 
 //===============================================================================
