--- a/wp-content/themes/evie/assets/less/main.less
+++ b/wp-content/themes/evie/assets/less/main.less
@@ -15,7 +15,8 @@
 @import "layouts/_sidebar";          // Sidebar styling
 @import "layouts/_footer";           // Footer styling
 @import "layouts/pages/_home";       // Home page styling
-@import "layouts/pages/_products";    // Product page styling
+@import "layouts/pages/_products";   // Product page styling
+@import "layouts/pages/_media";      // Media coverage page styling
 @import "layouts/_posts";            // Post styling
 
 // Nav
@@ -24,3 +25,6 @@
 //Owl Carousel plugin
 @import "components/owl-carousel";
 @import "components/owl-theme";
+
+//fancybox plugin
+@import "components/jquery-fancybox";
