--- a/wp-content/themes/evie/assets/less/main.less
+++ b/wp-content/themes/evie/assets/less/main.less
@@ -17,6 +17,7 @@
 @import "layouts/pages/_home";       // Home page styling
 @import "layouts/pages/_products";   // Product page styling
 @import "layouts/pages/_media";      // Media coverage page styling
+@import "layouts/pages/_promotion";  // Promotion page styling
 @import "layouts/_posts";            // Post styling
 
 // Nav
