--- a/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
@@ -4,74 +4,86 @@
 //===============================================================================
 //===============================================================================
 
-body{
-	font-family: Arial, sans serif !important;
-}
-
-.main{
-	padding-top:110px;
-}
-
-.breadcrumb-container{
-	background:#F5E8E5;
-	padding:10px 0;	
-	margin-bottom:10px;
-	-webkit-box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
-	-moz-box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
-	box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
-	.woocommerce-breadcrumb{
-		font-weight:bold;
-		color:#000;
-		text-transform:uppercase;
-		margin-bottom:0;
-		a{
-			color:#000;
-			font-weight:normal!important;
+.promotion-section{
+	text-align:center;
+	margin-top:40px;
+	padding-bottom:40px;
+	
+	.headline-title-container{
+		margin-bottom:10px;
+	}
+	.headline-content{
+		margin-bottom:80px;
+	}	
+	.promotion_1_container{
+		padding-bottom:55px;
+		margin-bottom:30px;
+		border-bottom:1px solid #231F20;
+		.promotion_1_headline{
+			width:80%;
+			margin:0 auto 25px auto;
+			padding-bottom:25px;
+			position:relative;
+			&:after{
+				position:absolute;
+				content: " ";
+				height:1px;
+				width:20%;
+				margin-left:-10%;
+				left:50%;
+				bottom:0;
+				background-color:#231F20;
+			}
+			h2{
+				font-size:38px;
+				margin:20px 0;
+			}
+			h3{
+				font-size:17.5px;
+				margin-top:0;
+			}
 		}
-		.fa{
-			margin:0 7px;
+		.promotion_1_content{
+			width:80%;
+			margin:0 auto;
+		}
+		.promotion_1_image{
+			img{
+				margin:0 auto;
+			}
 		}
 	}
-}
-
-.fancybox-close {
-	background:url(../img/sprites/fancybox_close_override.png) no-repeat !important;
-    position: absolute;
-    top: 0!important;
-    right: 0!important;
-    width: 36px;
-    height: 36px;
-    cursor: pointer;
-    z-index: 8040;
-}
-
-.headline-title-container{
-	margin-bottom:40px;
-	.headline-title-left{
-		height:51px;
-		background:url(../img/sprites/bg_bestseller.png) no-repeat left;
+	.promotion_2_container, .promotion_3_container{
+		h2{
+			font-size:28px;
+			margin:20px 0;
+		}
+		h3{
+			font-size:16px;
+			margin-top:0;
+		}
+		.promotion_content_container{
+			width:80%;
+			margin:0 auto;
+		}
 	}
-	.headline-title-center{
-		height:51px;
+	.col-same-height{
+		&.col-sm-6{
+			float:none;
+			display:table-cell;
+			&:first-child{
+				border-right:1px solid #231F20;
+			}
+		}
+	}
+	.more-special-title{
 		font-size:20px;
-		line-height:240%;
-		font-weight:bold;
 		text-transform:uppercase;
+		font-weight:bold;	
+		width:100%;
 		text-align:center;
-		background:url(../img/sprites/bg_bestseller.png) no-repeat center;
+		margin-bottom:50px;
 	}
-	.headline-title-right{
-		height:51px;
-		background:url(../img/sprites/bg_bestseller.png) no-repeat right;
-	}
-}
-
-.img-border{
-	border:1px solid #E1E1E1;
-}
-
-.img-center{
-	margin:0 auto;
 }
 
 //===============================================================================
@@ -80,7 +92,6 @@ body{
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-sm-min) {
-
 }
 
 //===============================================================================
@@ -89,16 +100,7 @@ body{
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-md-min) {
-	.main{
-		padding-top:165px;
-	}
-	div.col-sm-7.five-three {
-    	width: 60% !important;
-    }
-
-    div.col-sm-5.five-two {
-    	width: 40% !important;
-    }
+	
 }
 
 //===============================================================================
